--- a/pages/style/news.css
+++ b/pages/style/news.css
@@ -109,37 +109,71 @@ a > span:after {
   padding: 2%;
 }
 /*---------------FIN SIDEBAR--------------------*/
-
-/*---------------GRID---------------------*/
-
-.container_cons {
+/*---------------COMIENZO  NEWS---------------------*/
+.news {
+  color: #ffffff;
+  /* border: 1px solid white; */
   width: 100%;
-  max-width: 850px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas: "switch play xbox";
-  justify-items: center;
+  /* height: 100%; */
+  height: auto;
+  max-width: 1400px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 23px;
+  align-items: stretch;
+  justify-content: space-evenly;
+}
+
+.news_container {
+  text-align: center;
+  width: 95%;
+  height: auto;
+  border: 1px solid pink;
+  display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: space-around;
 }
 
-.switch {
-  grid-area: switch;
+#title_0,
+#title_1,
+#title_2,
+#title_3,
+#title_4,
+#title_5 {
+  display: flex;
+  justify-content: center;
+  text-transform: uppercase;
+  font-family: "Oswald", sans-serif;
+  color: rgb(51, 51, 51);
+  width: 30%;
+  padding: 3%;
 }
 
-.play {
-  grid-area: play;
+#short_description_0,
+#short_description_1,
+#short_description_2,
+#short_description_3,
+#short_description_4,
+#short_description_5 {
+  color: rgb(88, 88, 94);
+  font-family: "Oswald", sans-serif;
+  width: 40%;
 }
 
-.xbox {
-  grid-area: xbox;
+#url_0,
+#url_1,
+#url_2,
+#url_3,
+#url_4,
+#url_5 {
+  width: 90px;
+  height: 35px;
+  color: gray;
+  font-family: "Oswald", sans-serif;
+  border: 1px solid #000000;
+  border-radius: 7%;
+  margin: 3%;
 }
 
-/*---------------FIN GRID---------------------*/
-
-/*---------------COMIENZO ABOUT---------------------*/
-
-/*---------------FIN ABOUT---------------------*/
+/*---------------FIN  NEWS---------------------*/
