--- a/style/main.css
+++ b/style/main.css
@@ -119,6 +119,7 @@ a > span:after {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr;
   gap: 0px 0px;
+  padding-top: 3%;
   grid-auto-flow: row;
   grid-template-areas: "switch play xbox";
   justify-items: center;
@@ -143,3 +144,76 @@ a > span:after {
 /*---------------COMIENZO ABOUT---------------------*/
 
 /*---------------FIN ABOUT---------------------*/
+/*---------------COMIENZO  NEWS---------------------*/
+.news {
+  padding: 3%;
+  color: #ffffff;
+  /* border: 1px solid white; */
+  width: 100%;
+  /* height: 100%; */
+  height: auto;
+  max-width: 1400px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 23px;
+  align-items: stretch;
+  justify-content: space-evenly;
+}
+
+.news_container {
+  text-align: center;
+  width: 450px;
+  height: auto;
+  border: 1px solid rgb(88, 88, 94);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+#title_0,
+#title_1,
+#title_2,
+#title_3,
+#title_4,
+#title_5 {
+  display: flex;
+  justify-content: center;
+  text-transform: uppercase;
+  font-family: "Oswald", sans-serif;
+  color: rgb(51, 51, 51);
+  padding: 3%;
+}
+
+#short_description_0,
+#short_description_1,
+#short_description_2,
+#short_description_3,
+#short_description_4,
+#short_description_5 {
+  color: rgb(88, 88, 94);
+  font-family: "Oswald", sans-serif;
+  width: 240px;
+}
+
+#url_0,
+#url_1,
+#url_2,
+#url_3,
+#url_4,
+#url_5 {
+  width: 90px;
+  height: 35px;
+  color: gray;
+  font-family: "Oswald", sans-serif;
+  border: 1px solid rgb(47, 247, 97);
+  background-color: rgb(47, 247, 97);
+  border-radius: 7%;
+  margin: 3%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/*---------------FIN  NEWS---------------------*/
