--- a/style/about.css
+++ b/style/about.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Rubik&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap");
 
 * {
   margin: 0;
@@ -109,76 +110,23 @@ a > span:after {
   padding: 2%;
 }
 /*---------------FIN SIDEBAR--------------------*/
-/*---------------COMIENZO  NEWS---------------------*/
-.news {
-  padding: 3%;
-  color: #ffffff;
-  /* border: 1px solid white; */
+/* COMIENZO FOOTER */
+footer {
   width: 100%;
-  /* height: 100%; */
   height: auto;
-  max-width: 1400px;
+  background-color: rgb(17, 17, 17);
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 23px;
-  align-items: stretch;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 
-.news_container {
-  text-align: center;
-  width: 450px;
-  height: auto;
-  border: 1px solid rgb(88, 88, 94);
+.footer_img {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
 }
 
-#title_0,
-#title_1,
-#title_2,
-#title_3,
-#title_4,
-#title_5 {
-  display: flex;
-  justify-content: center;
-  text-transform: uppercase;
-  font-family: "Oswald", sans-serif;
-  color: rgb(51, 51, 51);
-  padding: 3%;
+.footer_img > p {
+  font-family: "Dosis", sans-serif;
+  color: #ffffff;
 }
-
-#short_description_0,
-#short_description_1,
-#short_description_2,
-#short_description_3,
-#short_description_4,
-#short_description_5 {
-  color: rgb(88, 88, 94);
-  font-family: "Oswald", sans-serif;
-  width: 240px;
-}
-
-#url_0,
-#url_1,
-#url_2,
-#url_3,
-#url_4,
-#url_5 {
-  width: 90px;
-  height: 35px;
-  color: gray;
-  font-family: "Oswald", sans-serif;
-  border: 1px solid rgb(47, 247, 97);
-  background-color: rgb(47, 247, 97);
-  border-radius: 7%;
-  margin: 3%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-/*---------------FIN  NEWS---------------------*/
+/* FIN FOOTER */
