--- a/style/editorpicks.css
+++ b/style/editorpicks.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Rubik&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap");
 
 * {
   margin: 0;
@@ -10,17 +12,27 @@
 }
 
 body {
-  background-color: #000000;
+  color: #000000;
+  width: 100%;
+  max-width: 1400px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  margin: 0 auto;
+  align-items: center;
+}
+
+/* body {
   width: 100%;
   height: auto;
   max-width: 1400px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 40px;
   justify-content: space-around;
-}
+} */
 
 /*---------------SIDEBAR---------------------*/
 .sidebar {
@@ -231,3 +243,23 @@ a > span:after {
   height: auto;
 }
 /*---------------FIN  GALLERY---------------------*/
+/* COMIENZO FOOTER */
+footer {
+  width: 100%;
+  height: auto;
+  background-color: rgb(17, 17, 17);
+  display: flex;
+  justify-content: center;
+}
+
+.footer_img {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer_img > p {
+  font-family: "Dosis", sans-serif;
+  color: #ffffff;
+}
+/* FIN FOOTER */
