--- a/style/main.css
+++ b/style/main.css
@@ -15,24 +15,15 @@ body {
   color: #000000;
   width: 100%;
   max-width: 1400px;
+  min-width: 360px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   align-content: center;
   margin: 0 auto;
   align-items: center;
+  overflow-x: hidden;
 }
-
-/* body {
-  width: 100%;
-  height: auto;
-  max-width: 1400px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  gap: 40px;
-  justify-content: space-around;
-} */
 
 /*---------------SIDEBAR---------------------*/
 .sidebar {
@@ -143,8 +134,8 @@ a > span:after {
 /*---------------FIN GRID---------------------*/
 
 /*---------------COMIENZO ABOUT---------------------*/
-
 /*---------------FIN ABOUT---------------------*/
+
 /*---------------COMIENZO  NEWS---------------------*/
 .news {
   padding: 3%;
@@ -216,10 +207,37 @@ a > span:after {
   align-items: center;
   justify-content: center;
 }
-
 /*---------------FIN  NEWS---------------------*/
 
-/* COMIENZO FOOTER */
+/*---------------COMIENZO MEDIA QUERY---------------------*/
+@media (max-width: 500px) {
+  .side_img {
+    display: none;
+  }
+
+  .sidebar a {
+    text-align: center;
+    width: 25%;
+  }
+
+  .container_cons img {
+    display: none;
+  }
+
+  .hero {
+    background-image: url("/img/hero/heroMobile.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 90%;
+    max-width: 1400px;
+    height: 450px;
+    position: relative;
+  }
+}
+
+/*---------------FIN  MEDIA QUERY---------------------*/
+
+/*---------------COMIENZO FOOTER---------------------*/
 footer {
   width: 100%;
   height: auto;
@@ -238,4 +256,4 @@ footer {
   font-family: "Dosis", sans-serif;
   color: #ffffff;
 }
-/* FIN FOOTER */
+/*---------------FIN FOOTER---------------------*/
